# odp-info-pages

./: .gitignore  README.md  manage.py  pyproject.toml
info_site/: asgi.py  settings.py  urls.py  views.py  wsgi.py
info_site/templates/: 404.html  base.html
odp_info_pages/: asgi.py  example_moles.json  example_opensearch.json  settings.py  urls.py  views.py  wsgi.py
odp_info_pages/info_site/: settings.py  urls.py
odp_info_pages/info_site/templates/: 404.html
odp_info_pages/pages/: urls.py
odp_info_pages/static/: ccike.css
odp_info_pages/templates/: base.html
pages/: views.py
static/: ccike.css
static/styles/: ccike.css  ccikewebsite-common.css  ccikewebsite-common.js  ccikewebsite-infopage.js  ccikewebsite-lowprio.css  ccikewebsite-lowprio.js  ccikewebsite-odpnav.css  ccikewebsite-odpnav.js
